syntax = "proto3";

package task;
option go_package = "./task";


message EditableTaskParams{
  string host = 2;
  string port = 3;
  repeated string commands = 4;
  string mode = 5;
  string executionMode = 6;
}

message Task{
  string uuid = 1;
  string host = 2;
  string port = 3;
  repeated string commands = 4;
  string mode = 5;
  string status = 6;
  string executionMode = 7;
}

message CreateTaskRequest{
  EditableTaskParams task = 1;
}

message CreateTaskResponse{
  Task task = 1;
}

message ReadTaskRequest{
  string task_uuid = 1;
}

message ReadTaskResponse{
  Task task = 1;
}

message UpdateTaskRequest{
  EditableTaskParams task = 1;
}

message UpdateTaskResponse{
  Task task = 1;
}

message DeleteTaskRequest{
  string task_uuid = 1;
}

message DeleteTaskResponse{
  string task_uuid = 1;
}

message ListTasksRequest{
}

message ListTasksResponse{
  repeated Task tasks = 1;
}

service TaskService{
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc ReadTask(ReadTaskRequest) returns (ReadTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
}

